force-app/main/default/objects/Exception__c/fields/Exception_Source__c.field-meta.xml
<CustomField>
    <fullName>Exception_Source__c</fullName>
    <label>Exception Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>